logs/onename.log
Listing '.'...
Listing './bin'...
Listing './bitcoin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/base58-0.2.5.dist-info'...
Listing './lib/python3.5/site-packages/bitcoin'...
Listing './lib/python3.5/site-packages/bitcoin-1.1.42.egg-info'...
Listing './lib/python3.5/site-packages/bitcoinrpc'...
Listing './lib/python3.5/site-packages/bitmerchant'...
Listing './lib/python3.5/site-packages/bitmerchant/wallet'...
Listing './lib/python3.5/site-packages/bitmerchant-0.1.8.dist-info'...
Listing './lib/python3.5/site-packages/cachetools'...
Listing './lib/python3.5/site-packages/cachetools-2.0.1.dist-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/commontools'...
Listing './lib/python3.5/site-packages/commontools-0.1.0.egg-info'...
Listing './lib/python3.5/site-packages/ecdsa'...
Listing './lib/python3.5/site-packages/ecdsa-0.13.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/keychain'...
Listing './lib/python3.5/site-packages/keychain-0.14.2.0.egg-info'...
Listing './lib/python3.5/site-packages/keylib'...
Listing './lib/python3.5/site-packages/keylib-0.1.1.egg-info'...
Listing './lib/python3.5/site-packages/onename'...
Listing './lib/python3.5/site-packages/onename-0.2.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pybitcoin'...
Listing './lib/python3.5/site-packages/pybitcoin/passphrases'...
Listing './lib/python3.5/site-packages/pybitcoin/rpc'...
Compiling './lib/python3.5/site-packages/pybitcoin/rpc/namecoind_cluster.py'...
***   File "./lib/python3.5/site-packages/pybitcoin/rpc/namecoind_cluster.py", line 149
    print namecoind.sendrawtransaction(raw_tx)
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pybitcoin/services'...
Compiling './lib/python3.5/site-packages/pybitcoin/services/blockchain_info.py'...
***   File "./lib/python3.5/site-packages/pybitcoin/services/blockchain_info.py", line 52
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pybitcoin/services/chain_com.py'...
***   File "./lib/python3.5/site-packages/pybitcoin/services/chain_com.py", line 54
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pybitcoin/transactions'...
Listing './lib/python3.5/site-packages/pybitcoin-0.9.9.egg-info'...
Listing './lib/python3.5/site-packages/python_bitcoinrpc-0.1.egg-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/utilitybelt'...
Listing './lib/python3.5/site-packages/utilitybelt-0.2.6.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
